# pkl-rust-starter

./: Cargo.toml
pkl/: AppConfig.pkl
src/: main.rs
src/pkl/: app_config.rs
