[package]
name = "pkl-rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pkl-bind = { path = "../pkl-rust/pkl-bind" }
pkl-derive = { path = "../pkl-rust/pkl-derive" }
pkl-gen = { path = "../pkl-rust/pkl-gen" }
rmp-serde = "1.3.0"
